# verilog-projects

./: .gitignore  LICENSE  README.md
projects/pwm-generator/: pwm_gen.v  pwm_gen_tb.v  pwm_gen_tb.vvp  waveform.vcd
projects/template/: Buffer.v  Buffer_tb.cc  CMakeLists.txt
